--- a/Resources/connect.css
+++ b/Resources/connect.css
@@ -37,7 +37,6 @@ h1 #help {
   position: fixed;
   z-index: 1;
   top: 20px;
-  left: 10px;
   background: #eee;
   overflow-x: hidden;
   padding: 8px 0;
@@ -57,8 +56,39 @@ h1 #help {
     color: blue;
 }
 
-.connections {
+h2 {
 	text-align: center;
 	font-size: 2em;
-	font-style: underline;
+	text-decoration: underline;
+}
+
+.person {
+	text-align: center;
+	width: 250px;
+	margin-right: auto;
+	margin-left: auto;
+}
+.person p{
+	text-align: center;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.person a{
+	font-size: 1.4em;
+	color: blue;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.person a:hover {
+	color: black;
+}
+
+.connections {
+	text-align: center;
+	width: 400px;
+	margin: 0 auto;
+	padding-bottom: 15px;
+	border-style: solid;
 }
