--- a/Resources/index.css
+++ b/Resources/index.css
@@ -1,11 +1,11 @@
 
 body{
-	background-color: beige;
+	background-color: lightcyan;
 }
 
 h1 {
 	text-align: center;
-	text-shadow: 2px 2px cyan;
+	text-shadow: 1.5px 1.5px darkcyan;
 }
 
 form{
@@ -30,7 +30,7 @@ legend{
     
 }
 
-.tooltip .tooltiptext {
+.tooltip .bottomtooltiptext {
     visibility: hidden;
     
     background-color: black;
@@ -46,10 +46,34 @@ legend{
     
     /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
     opacity: 0;
-    transition: opacity 1s;
+    transition: opacity 1.5s;
 }
 
-.tooltip:hover .tooltiptext {
+.tooltip .righttooltiptext{
+	visibility: hidden;
+    
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    left: 100%;
+    
+    margin-left: -60px;
+    
+    /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
+    opacity: 0;
+    transition: opacity 1.5s;
+}
+
+.tooltip:hover .righttooltiptext {
+    visibility: visible;
+    opacity: 0.5;
+}
+
+.tooltip:hover .bottomtooltiptext {
     visibility: visible;
     opacity: 0.5;
 }
