--- a/Resources/connect.css
+++ b/Resources/connect.css
@@ -1,23 +1,24 @@
 h1 {
-	border-color: black;
-	border-bottom: 2px solid #333;
-	padding-bottom: 10px;
-	background-color: rgb(100,180,255);
 	text-align: center;
-	margin-top: 0px;
-	overflow: hidden;
-}
-
-h1 #forum {
-	font-size: .8em;
-	margin-top: 5px;
-	float: left;
+	font-size: 30px;
+	border-bottom: 6px solid #333;
+    width:110%;
+	margin: 0px;
+    background-color: blue;
+    color: white;
+    margin-top: 0;
+    padding-top: 0;
 }
 
 h1 a:hover {
 	color: black;
 }
 
+body {
+	background-color: lightcyan;
+	margin: 0;
+	padding: 0;
+}
 #header {
 	text-align: center;
 	padding-top: 20px;
@@ -31,29 +32,28 @@ h1 #help {
 
 }
 
-.sidebar {
-	margin-top: 125px;
-  width: 130px;
-  position: fixed;
-  z-index: 1;
-  top: 20px;
-  background: #eee;
-  overflow-x: hidden;
-  padding: 8px 0;
+.sidebar a:hover {
+    color: #f1f1f1;
 }
 
-/* The navigation menu links */
+.sidebar {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
 .sidebar a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
-    font-size: 2em;
-    color: black;
+    font-size: 25px;
+    color: #818181;
     display: block;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidebar a:hover {
-    color: blue;
 }
 
 h2 {
@@ -87,8 +87,9 @@ h2 {
 
 .connections {
 	text-align: center;
-	width: 400px;
+	width: 800px;
 	margin: 0 auto;
-	padding-bottom: 15px;
+	margin-top: 30px;
+	padding-bottom: 30px;
 	border-style: solid;
 }
