--- a/Resources/forum.css
+++ b/Resources/forum.css
@@ -4,11 +4,18 @@
 	border-bottom: 6px solid #333;
     width:110%;
 	margin: 0px;
-
+    background-color: blue;
+    color: white;
+    margin-top: 0;
+    padding-top: 0;
 }
 
 body{
-    background-color: lightblue;
+    margin: 0;
+    padding: 0;
+    height:90%;
+    float: bottom;
+    background-color: lightcyan;
 }
 
 
