--- a/Resources/connect.css
+++ b/Resources/connect.css
@@ -2,12 +2,13 @@ h1 {
 	text-align: center;
 	font-size: 30px;
 	border-bottom: 6px solid #333;
-    width:110%;
+	width:110%;
 	margin: 0px;
-    background-color: blue;
-    color: white;
-    margin-top: 0;
-    padding-top: 0;
+	background-color: blue;
+	color: white;
+	margin-top: 0;
+	padding-top: 0;
+	height: 88px;
 }
 
 h1 a:hover {
@@ -52,7 +53,7 @@ h1 #help {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: lightcyan;
     display: block;
 }
 
@@ -92,4 +93,12 @@ h2 {
 	margin-top: 30px;
 	padding-bottom: 30px;
 	border-style: solid;
+}
+
+#navlink {
+	border-bottom: 6px solid blue; 
+}
+
+#logout {
+	margin-top: 350%;
 }
