--- a/Resources/forum.css
+++ b/Resources/forum.css
@@ -9,7 +9,27 @@
     margin-top: 0;
     padding-top: 0;
 }
+#header {
+    text-align: center;
+    padding-top: 20px;
+    font-size: 1.3em;
+}
+h1 {
+    text-align: center;
+    font-size: 30px;
+    border-bottom: 6px solid #333;
+    width:110%;
+    margin: 0px;
+    background-color: blue;
+    color: white;
+    margin-top: 0;
+    padding-top: 0;
+    height: 88px;
+}
 
+h1 a:hover {
+    color: black;
+}
 body{
     margin: 0;
     padding: 0;
@@ -57,6 +77,9 @@ ul{
 .sidenav a:hover {
     color: #f1f1f1;
 }
+#logout {
+    margin-top: 350%;
+}
 #ds{
     color: cyan;
 }
@@ -71,7 +94,9 @@ ul{
     overflow-x: hidden;
     padding-top: 20px;
 }
-
+#navlink {
+    border-bottom: 6px solid blue; 
+}
 .sidenav a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
