--- a/Resources/forum.css
+++ b/Resources/forum.css
@@ -1,13 +1,14 @@
-.head{
-	text-align: center;
-	font-size: 30px;
-	border-bottom: 6px solid #333;
+h1 {
+    text-align: center;
+    font-size: 30px;
+    border-bottom: 6px solid #333;
     width:110%;
-	margin: 0px;
+    margin: 0px;
     background-color: blue;
     color: white;
     margin-top: 0;
     padding-top: 0;
+    height: 88px;
 }
 
 body{
@@ -78,4 +79,12 @@ ul{
     font-size: 25px;
     color: #818181;
     display: block;
+}
+
+#navlink {
+    border-bottom: 6px solid blue; 
+}
+
+#logout {
+    margin-top: 350%;
 }
