--- a/Resources/index.css
+++ b/Resources/index.css
@@ -1,14 +1,24 @@
 
 body{
 	background-color: lightcyan;
+    margin: 0;
 }
 
 h1 {
-	text-align: center;
-	text-shadow: 1.5px 1.5px darkcyan;
+    text-align: center;
+    font-size: 30px;
+    border-bottom: 6px solid #333;
+    width:110%;
+    margin: 0px;
+    background-color: blue;
+    color: white;
+    margin-top: 0;
+    padding-top: 0;
+    height: 88px;
 }
 
 form{
+    padding-top: 15px;
 	padding-bottom: 5px;
 }
 
