--- a/Resources/forum.css
+++ b/Resources/forum.css
@@ -43,7 +43,10 @@ body{
 ul{
     margin-top: 0px;
     margin-bottom: 0px;
+    padding-top: 0;
+    padding-bottom: 0;
     border-bottom:3px solid #333;
+    border-top:3px solid #333;
 	list-style-type: none;
 
 }
@@ -112,4 +115,24 @@ ul{
 
 #logout {
     margin-top: 350%;
+}
+
+.makepost {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 1.8em;
+    margin-bottom: 20px;
+}
+
+.makepost a {
+    color: blue;
+}
+
+.makepost a:hover {
+    color: black;
+}
+
+#old_user {
+    text-align: center;
+    font-size: 1.5em;
 }
