--- a/Resources/forum.css
+++ b/Resources/forum.css
@@ -2,7 +2,7 @@ h1 {
     text-align: center;
     font-size: 30px;
     border-bottom: 6px solid #333;
-    width:100%;
+    width:110%;
     margin: 0px;
     background-color: blue;
     color: white;
@@ -14,6 +14,15 @@ h1 {
     text-align: center;
     padding-top: 20px;
     font-size: 1.3em;
+}
+#post{
+    font-style: italic;
+    color:blue;
+    margin: 5px ;
+    width: 100px;
+    border-radius: 15px;
+    background-color: white;
+
 }
 h1 {
     text-align: center;
@@ -46,14 +55,13 @@ ul{
     padding-top: 0;
     padding-bottom: 0;
     border-bottom:3px solid #333;
-    border-top:3px solid #333;
 	list-style-type: none;
 
 }
 .discussion:hover{
     cursor: pointer;
 }
-.discussion {
+#discussion {
     margin-top: 0px;
     margin-left: 52px; /* Same as the width of the sidenav */
     font-size: 28px; /* Increased text to enable scrolling */
