--- a/Resources/connect.css
+++ b/Resources/connect.css
@@ -1,14 +1,15 @@
 h1 {
-	text-align: center;
 	font-size: 30px;
 	border-bottom: 6px solid #333;
-	width:100%;
+	width:90%;
 	margin: 0px;
 	background-color: blue;
 	color: white;
 	margin-top: 0;
 	padding-top: 0;
 	height: 88px;
+	text-align: center;
+	padding-left: 10%;
 }
 
 h1 a:hover {
@@ -93,6 +94,7 @@ h2 {
 	margin-top: 30px;
 	padding-bottom: 30px;
 	border-style: solid;
+	margin-left: 28%;
 }
 
 #navlink {
@@ -100,7 +102,7 @@ h2 {
 }
 
 #logout {
-	margin-top: 330%;
+	margin-top: 290%;
 }
 
 #selected {
