--- a/Resources/forum.css
+++ b/Resources/forum.css
@@ -2,13 +2,14 @@ h1 {
     text-align: center;
     font-size: 30px;
     border-bottom: 6px solid #333;
-    width:110%;
+    width:90%;
     margin: 0px;
     background-color: blue;
     color: white;
     margin-top: 0;
     padding-top: 0;
     height: 88px;
+    padding-left: 10%;
 }
 #header {
     text-align: center;
@@ -23,18 +24,6 @@ h1 {
     border-radius: 15px;
     background-color: white;
 
-}
-h1 {
-    text-align: center;
-    font-size: 30px;
-    border-bottom: 6px solid #333;
-    width:110%;
-    margin: 0px;
-    background-color: blue;
-    color: white;
-    margin-top: 0;
-    padding-top: 0;
-    height: 88px;
 }
 
 h1 a:hover {
@@ -90,7 +79,7 @@ ul{
     color: #f1f1f1;
 }
 #logout {
-    margin-top: 350%;
+    margin-top: 270%;
 }
 #ds{
     color: cyan;
@@ -119,10 +108,6 @@ ul{
 
 #navlink {
     border-bottom: 6px solid blue; 
-}
-
-#logout {
-    margin-top: 350%;
 }
 
 .makepost {
