--- a/Resources/forum.css
+++ b/Resources/forum.css
@@ -2,14 +2,13 @@ h1 {
     text-align: center;
     font-size: 30px;
     border-bottom: 6px solid #333;
-    width:90%;
+    width:110%;
     margin: 0px;
     background-color: blue;
     color: white;
     margin-top: 0;
     padding-top: 0;
     height: 88px;
-    padding-left: 10%;
 }
 #header {
     text-align: center;
@@ -24,6 +23,18 @@ h1 {
     border-radius: 15px;
     background-color: white;
 
+}
+h1 {
+    text-align: center;
+    font-size: 30px;
+    border-bottom: 6px solid #333;
+    width:110%;
+    margin: 0px;
+    background-color: blue;
+    color: white;
+    margin-top: 0;
+    padding-top: 0;
+    height: 88px;
 }
 
 h1 a:hover {
@@ -79,11 +90,15 @@ ul{
     color: #f1f1f1;
 }
 #logout {
-    position: absolute;
-    bottom: 5%;
+    margin-top: 350%;
 }
 .ds{
     color: cyan;
+}
+.homeScreen{
+    padding-left: 40%;
+    font-size: 50px;
+    float: center;
 }
 .sidenav {
     height: 100%;
@@ -111,6 +126,10 @@ ul{
     border-bottom: 6px solid blue; 
 }
 
+#logout {
+    margin-top: 350%;
+}
+
 .makepost {
     margin-top: 20px;
     text-align: center;
@@ -129,16 +148,4 @@ ul{
 #old_user {
     text-align: center;
     font-size: 1.5em;
-}
-
-.field {
-    width: 90%;
-    padding-left: 10%;
-}
-.value{
-    width: 90%;
-    padding-left: 10%;
-}
-#save{
-    margin-left: 10%;
 }
