--- a/Resources/forum.css
+++ b/Resources/forum.css
@@ -69,6 +69,14 @@ ul{
     width: 100%;
     color: blue;
 }
+.discussionComment {
+    margin-top: 0px;
+    margin-left: 52px; /* Same as the width of the sidenav */
+    font-size: 28px; /* Increased text to enable scrolling */
+    padding: 0px 10px;
+    width: 100%;
+    color: white;
+}
 .internalDisc{
     margin-left: 52px; /* Same as the width of the sidenav */
     font-size: 28px; /* Increased text to enable scrolling */
