--- a/Resources/index.css
+++ b/Resources/index.css
@@ -10,16 +10,31 @@ h1 {
     border-bottom: 6px solid #333;
     width:100%;
     margin: 0px;
-    background-color: blue;
     color: white;
     margin-top: 0;
     padding-top: 0;
-    height: 88px;
+    height: 174px;
 }
 
-form{
-    padding-top: 15px;
-	padding-bottom: 5px;
+#header {
+/*  background: transparent !important;*/
+  background: #0cb5ff;
+  color: white;
+}
+
+#messages {
+  margin-top: 5px;
+}
+
+section {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 15px;
+  padding: 20px;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 legend{
@@ -32,12 +47,12 @@ legend{
 
 .value{
 	border-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .tooltip {
     position: relative;
-    display: inline-block;
-    
+    display: inline-block;   
 }
 
 .tooltip .bottomtooltiptext {
@@ -91,7 +106,6 @@ legend{
 
 a {
     text-align: center;
-    font-size: 1.5em;
     color: black;
 }
 
@@ -101,4 +115,13 @@ a:hover {
 
 h4 {
     text-align: center;
+}
+
+#sign_in {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.btn {
+  margin-bottom: 10px;
 }
