--- a/Resources/index.css
+++ b/Resources/index.css
@@ -30,9 +30,9 @@ section {
   border-style: solid;
   border-width: 1px;
   border-radius: 15px;
-  padding: 20px;
-  margin-left: 200px;
-  margin-right: 200px;
+  padding: 20px;;
+  width: 400px;
+  margin: auto;
   margin-top: 20px;
   margin-bottom: 20px;
 }
