--- a/Resources/forum.css
+++ b/Resources/forum.css
@@ -2,19 +2,16 @@ h1 {
     text-align: center;
     font-size: 30px;
     border-bottom: 6px solid #333;
-    width:90%;
     margin: 0px;
     background-color: blue;
     color: white;
     margin-top: 0;
     padding-top: 0;
     height: 88px;
-    padding-left: 10%;
+    padding-left: 160px;
 }
 #header {
-    text-align: center;
-    padding-top: 20px;
-    font-size: 1.3em;
+    width: 100%;
 }
 #post{
     font-style: italic;
