--- a/Resources/connect.css
+++ b/Resources/connect.css
@@ -1,37 +1,27 @@
-h1 {
-	font-size: 30px;
-	border-bottom: 6px solid #333;
-	width:90%;
-	margin: 0px;
-	background-color: blue;
-	color: white;
-	margin-top: 0;
-	padding-top: 0;
-	height: 88px;
-	text-align: center;
-	padding-left: 10%;
+body{
+	background-color: lightcyan;
+    margin: 0;
 }
 
+h1 {
+    text-align: center;
+    font-size: 30px;
+    border-bottom: 6px solid #333;
+    width:100%;
+    margin: 0px;
+    color: white;
+    margin-top: 0;
+    padding-top: 0;
+    height: 174px;
+}
 h1 a:hover {
 	color: black;
 }
 
-body {
-	background-color: lightcyan;
-	margin: 0;
-	padding: 0;
-}
+
 #header {
-	text-align: center;
-	padding-top: 20px;
-	font-size: 1.3em;
-}
-
-h1 #help {
-	float: right;
-	float: top;
-	font-size: 2em;
-
+	background: #0cb5ff;
+	color: white;
 }
 
 .sidebar a:hover {
@@ -42,10 +32,10 @@ h1 #help {
     height: 100%;
     width: 160px;
     position: fixed;
-    z-index: 1;
+
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: blue;
     overflow-x: hidden;
     padding-top: 20px;
 }
