--- a/Resources/index.css
+++ b/Resources/index.css
@@ -35,7 +35,7 @@ section {
 }
 
 form{
-    padding-top: 15px;
+  padding-top: 15px;
 	padding-bottom: 5px;
 }
 
@@ -50,13 +50,15 @@ legend{
 .value{
 	border-bottom: 5px;
   margin-bottom: 5px;
+}
 
+div {
+  margin-bottom: 5px;
 }
 
 .tooltip {
     position: relative;
     display: inline-block;
-    
 }
 
 .tooltip .bottomtooltiptext {
