--- a/Resources/style.css
+++ b/Resources/style.css
@@ -97,6 +97,11 @@ section {
 	grid-template-columns: 30% 30% 30%;
 	grid-gap: 10px;
 }
+.wrapperViewProf {
+	display: grid;
+	grid-template-columns: 40% 50%;
+	grid-gap: 10px;
+}
 
 .box{
 	padding-left: 5%;
