--- a/Resources/style.css
+++ b/Resources/style.css
@@ -109,10 +109,12 @@ section {
   font-size: 100%;
   overflow-y: scroll;
   width: 95%;
-  height: 65%;
+  height: 60%;
 }
 .right {
 	font-size: 100%;
+  height: 90%;
+  overflow-y: scroll;
 }
 
 fieldset {
