--- a/Resources/style.css
+++ b/Resources/style.css
@@ -201,7 +201,9 @@ a#discussion {
 .collapsible-header h4{
 	padding: 0px;
 }
-
+.review{
+	padding: 2%;
+}
 #addSubject {
   padding-left: 20px;
   padding-right: 20px;
